--- a/components/goods-item/index.wxml
+++ b/components/goods-item/index.wxml
@@ -5,9 +5,8 @@
   </view>
   <view class="content">
     <view class="goods-name omit">
-      <text class="goods-tag" wx:if="{{!item.shopInfo}}">自营</text>
-      <text wx:if="{{!item.shopInfo}}"> {{item.name}}</text>
-      <text wx:if="{{item.shopInfo}}">{{item.name}}</text>
+      <image class="self-support-icon" wx:if="{{!item.shopInfo}}" src="/images/self-support.png" />
+      <text>{{item.name}}</text>
     </view>
     <view class="info-wrap row between">
       <view class="row baseline">
