--- a/components/goods-item/index.wxss
+++ b/components/goods-item/index.wxss
@@ -68,17 +68,12 @@
   font-size: 26rpx;
   font-weight: bold;
 }
-.goods-tag {
-  padding: 1rpx 10rpx;
-  height: 33rpx;
-  color: #ef3741;
-  font-size: 22rpx;
-  line-height: 33rpx;
-  font-weight: 500;
-  text-align: center;
-  vertical-align: text-bottom;
-  border-radius: 8rpx;
-  background: #fce4e6;
+.self-support-icon {
+  margin-right: 8rpx;
+  margin-bottom: 4rpx;
+  vertical-align: bottom;
+  width: 52rpx;
+  height: 30rpx;
 }
 
 .info-wrap {
