--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
@@ -188,20 +188,12 @@ page {
   font-size: 34rpx;
   font-weight: 600;
 }
-.goods-tag {
-  vertical-align: top;
-  display: inline-block;
-  margin-right: 10rpx;
-  margin-bottom: 10rpx;
-  padding: 0 12rpx;
-  height: 36rpx;
-  color: #ef3741;
-  font-size: 22rpx;
-  line-height: 36rpx;
-  text-align: center;
-  font-weight: 500;
-  border-radius: 8rpx;
-  background: #fce4e6;
+.self-support-icon {
+  margin-right: 12rpx;
+  margin-bottom: 6rpx;
+  vertical-align: bottom;
+  width: 68rpx;
+  height: 38rpx;
 }
 .goods-intro {
   margin-top: 18rpx;
