--- a/components/goods-item/index.wxss
+++ b/components/goods-item/index.wxss
@@ -43,6 +43,31 @@
 .cover-wrap.show-tag {
   border-radius: 32rpx;
 }
+.cover-wrap.gift {
+  border: 4px solid #C6EFFF;
+  border-radius: 32rpx;
+}
+.gift-header {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-top: 2rpx;
+  width: 240rpx;
+  height: 43rpx;
+  color: #333;
+  font-size: 22rpx;
+  font-weight: bold;
+  text-align: center;
+  background-image: url('https://static.tiddler.cn/mp/gift/gift_header_bg.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.duration {
+  color: var(--blue-1);
+  font-size: 24rpx;
+  font-weight: bolder;
+}
 .cover {
   width: 350rpx;
 }
