--- a/pages/subpages/mall/hotel/components/hotel-item/index.wxss
+++ b/pages/subpages/mall/hotel/components/hotel-item/index.wxss
@@ -49,7 +49,7 @@
   width: 100%;
   height: 8rpx;
   content: '';
-  background: #6097f7;
+  background: var(--blue-2);
   opacity: 0.6;
 }
 .other-data {
