--- a/pages/subpages/mine/coupon-list/index.wxss
+++ b/pages/subpages/mine/coupon-list/index.wxss
@@ -31,7 +31,7 @@ page {
   width: 100rpx;
   height: 8rpx;
   content: "";
-  background: linear-gradient(135deg, #6097f7 0%, #fff 100%);
+  background: linear-gradient(135deg, var(--blue-2) 0%, #fff 100%);
   border-radius: 4rpx;
   z-index: -1;
 }
