--- a/components/video-item/index.wxml
+++ b/components/video-item/index.wxml
@@ -2,13 +2,8 @@
 
 <view class="video-item {{visible ? 'show' : ''}}" bindtap="navToVideoDetail">
   <view class="cover-wrap">
-    <image 
-      class="cover {{ coverMode !== 'widthFix' ? 'over-size' : '' }}"
-      src="{{item.cover}}?x-oss-process=image/resize,w_450" 
-      mode="{{ coverMode }}" 
-      bindload="onCoverLoaded"
-      lazy-load 
-    />
+    <image class="cover" style="height: {{item.coverHeight}}rpx;" wx:if="{{item.coverHeight}}" src="{{item.cover}}?x-oss-process=image/resize,w_450" mode="aspectFill" />
+    <image class="cover" wx:if="{{!item.coverHeight}}" src="{{item.cover}}?x-oss-process=image/resize,w_450" bindload="onCoverLoaded" mode="widthFix" lazy-load />
     <view class="private-tag row" wx:if="{{item.isPrivate}}">
       <image class="private-icon" src="/images/private-icon.png" />
       <text>私密</text>
