feat: 列表封面加载

--- a/components/goods-item/index.wxml
+++ b/components/goods-item/index.wxml
@@ -5,7 +5,8 @@
       <text class="duration">100</text>
       <text>天</text>
     </view>
-    <image class="cover" mode="widthFix" src="{{ item.cover }}" bindload="onCoverLoaded" lazy-load />
+    <image class="cover" style="height: {{item.coverHeight}}rpx;" wx:if="{{item.coverHeight}}" src="{{item.cover}}?x-oss-process=image/resize,w_450" mode="aspectFill" />
+    <image class="cover" wx:if="{{!item.coverHeight}}" src="{{item.cover}}?x-oss-process=image/resize,w_450" bindload="onCoverLoaded" mode="widthFix" lazy-load />
     <view class="type-label row" wx:if="{{showTag}}">商品</view>
   </view>
   <view class="content">
