feat: 短视频、图文统一为游记

--- a/pages/subpages/common/search/components/hotel-item/index.wxml
+++ b/pages/subpages/common/search/components/hotel-item/index.wxml
@@ -9,7 +9,7 @@
         <text class="data-num">20</text>
         点评 · 
         <text class="data-num">1</text>
-        游记 ·
+        图文游记 ·
         <text class="data-num">1</text>
         收藏
       </view>
