--- a/pages/subpages/home/media/author-center/index.wxml
+++ b/pages/subpages/home/media/author-center/index.wxml
@@ -43,21 +43,21 @@
 
     <view class="works-wrap {{menuFixed ? 'fixed' : '' }}">
       <view class="works-menu {{menuFixed ? 'fixed' : '' }}" style="top: {{menuFixed ? statusBarHeight + 44 : 0}}px;">
-        <view wx:for="{{['短视频', '游记']}}" wx:key="index" class="works-menu-item {{curMenuIndex === index ? 'active' : ''}}" bindtap="switchMenu" data-index="{{index}}">{{item}}</view>
+        <view wx:for="{{['视频游记', '图文游记']}}" wx:key="index" class="works-menu-item {{curMenuIndex === index ? 'active' : ''}}" bindtap="switchMenu" data-index="{{index}}">{{item}}</view>
         <view class="active-underline" style="left: {{curMenuIndex * 50}}vw;"></view>
       </view>
       <swiper style="height: {{wrapHeightList[curMenuIndex]}}px;" current="{{curMenuIndex}}" bindchange="swiperChange">
         <swiper-item>
           <view class="content-wrap">
             <fall-flow class="fall-flow-0" list="{{videoList}}" mediaScene="{{2}}" generic:item="video-item" bind:finish="setWrapHeight" />
-            <empty-illus wx:if="{{videoFinished && !videoList.length}}" desc="暂无短视频列表" height="520rpx" />
+            <empty-illus wx:if="{{videoFinished && !videoList.length}}" desc="暂无视频游记列表" height="520rpx" />
             <view class="no-more-tips" wx:if="{{videoFinished && videoList.length}}">～没有更多了～</view>
           </view>
         </swiper-item>
         <swiper-item>
           <view class="content-wrap">
             <fall-flow class="fall-flow-1" list="{{noteList}}" mediaScene="{{2}}" generic:item="note-item" bind:finish="setWrapHeight" />
-            <empty-illus wx:if="{{noteFinished && !noteList.length}}" desc="暂无游记列表" height="520rpx" />
+            <empty-illus wx:if="{{noteFinished && !noteList.length}}" desc="暂无图文游记列表" height="520rpx" />
             <view class="no-more-tips" wx:if="{{noteFinished && noteList.length}}">～没有更多了～</view>
           </view>
         </swiper-item>
