--- a/pages/tab-bar-pages/home/components/top-media/index.wxss
+++ b/pages/tab-bar-pages/home/components/top-media/index.wxss
@@ -99,7 +99,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 16rpx;
+  padding: 0 16rpx;
+  height: 100rpx;
   width: 100%;
   backdrop-filter: blur(10px);
 }
