feat: 首页金刚区

--- a/pages/tab-bar-pages/home/components/top-media/index.wxml
+++ b/pages/tab-bar-pages/home/components/top-media/index.wxml
@@ -1,5 +1,5 @@
 <view class="top-media-wrap">
-  <swiper class="top-media-swiper" current="{{curMediaIdx}}" bindchange="swiperChange" autoplay circular>
+  <swiper class="top-media-swiper" current="{{curMediaIdx}}" bindchange="swiperChange" circular>
     <swiper-item 
       class="top-media" 
       wx:for="{{mediaList}}" 
