--- a/pages/tab-bar-pages/home/index.wxss
+++ b/pages/tab-bar-pages/home/index.wxss
@@ -12,13 +12,8 @@
 .menu-tabs-wrap {
   display: flex;
   align-items: center;
-  padding-left: 8px;
-  padding-right: 43px;
+  padding: 0 8px;
   height: 44px;
-}
-.sign-in-icon {
-  width: 35px;
-  height: 29.5px;
 }
 .menu-tabs {
   display: flex;
@@ -38,6 +33,30 @@
   color: #000;
   font-size: 18px;
   font-weight: 600;
+}
+
+.sign-in-icon {
+  width: 35px;
+  height: 29.5px;
+}
+
+.promoter-icon {
+  position: relative;
+  width: 38px;
+  height: 38px;
+}
+.promoter-avatar {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+}
+.promoter-medal {
+  position: absolute;
+  right: -4px;
+  bottom: -2px;
+  width: 24px;
+  height: 24px;
 }
 
 .search-bar {
