--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -3,16 +3,22 @@
 <view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
   <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{userInfo.bg || 'https://static.tiddler.cn/mp/bg.png'}}" />
   <view class="bg-cover" wx:if="{{navBarVisible}}" />
-  <image class="sign-in-icon" src="/images/sign_in.png" />
-  <image class="mine-avatar" wx:if="{{navBarVisible}}" src="{{userInfo.avatar}}" />
+  <image class="sign-in-icon" wx:if="{{!navBarVisible}}" src="/images/sign_in.png" />
+  <view class="mine-avatar-wrap" wx:if="{{navBarVisible}}">
+    <image class="mine-avatar" src="{{userInfo.avatar}}" />
+    <image class="mine-medal" src="https://static.tiddler.cn/mp/medal.gif" />
+  </view>
   <view class="mine-name" wx:if="{{navBarVisible}}">{{userInfo.nickname}}</view>
 </view>
 
 <view class="container">
   <image class="bg" src="{{userInfo.bg || 'https://static.tiddler.cn/mp/bg.png'}}" bindtap="navToUserInfoSetting" mode="aspectFill" />
   <view class="content">
-    <view class="avatar-wrap">
-      <image class="avatar" bindtap="navToUserInfoSetting" src="{{userInfo.avatar}}" />
+    <view class="user-info-wrap">
+      <view class="avatar-wrap">
+        <image class="avatar" bindtap="navToUserInfoSetting" src="{{userInfo.avatar}}" />
+        <image class="promoter-medal" src="https://static.tiddler.cn/mp/medal.gif" />
+      </view>
       <view class="data-wrap">
         <view class="data-item">
           <view class="data-title">获赞</view>
@@ -69,10 +75,10 @@
         <image class="function-icon" src="./images/merchant.png" />
         <view class="function-desc">商家中心</view>
       </navigator>
-      <view class="function-item" bindtap="navToLive">
+      <!-- <view class="function-item" bindtap="navToLive">
         <image class="function-icon" src="./images/live.png" />
         <view class="function-desc">我的直播</view>
-      </view>
+      </view> -->
       <navigator class="function-item" url="/pages/subpages/mine/history/index" hover-class="none">
         <image class="function-icon" src="./images/history.png" />
         <view class="function-desc">浏览历史</view>
