--- a/pages/tab-bar-pages/mine/index.wxss
+++ b/pages/tab-bar-pages/mine/index.wxss
@@ -31,14 +31,28 @@
   height: 29.5px;
 }
 
-.mine-avatar {
+.mine-avatar-wrap {
+  position: relative;
   margin-left: 8px;
   width: 30px;
   height: 30px;
+  font-size: 0;
+}
+.mine-avatar {
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
+  border: 2px solid #fff;
+}
+.mine-medal {
+  position: absolute;
+  right: -6px;
+  bottom: -4px;
+  width: 22px;
+  height: 22px;
 }
 .mine-name {
-  margin-left: 8px;
+  margin-left: 12px;
   color: #fff;
   font-size: 16px;
   font-weight: bold;
@@ -62,7 +76,8 @@
   border-radius: 30rpx 30rpx 0 0;
   background: #f5f6f8;
 }
-.avatar-wrap {
+
+.user-info-wrap {
   position: absolute;
   top: -36rpx;
   display: flex;
@@ -70,13 +85,28 @@
   padding-left: 36rpx;
   width: 100%;
 }
-.avatar {
+.avatar-wrap {
+  position: relative;
   width: 180rpx;
   height: 180rpx;
+  font-size: 0;
   border-radius: 50%;
   border: 10rpx solid #f5f6f8;
   background: #f5f6f8;
 }
+.avatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.promoter-medal {
+  position: absolute;
+  right: -12rpx;
+  bottom: -12rpx;
+  width: 80rpx;
+  height: 80rpx;
+}
+
 .data-wrap {
   display: flex;
   flex: 1;
