--- a/pages/tab-bar-pages/home/index.wxss
+++ b/pages/tab-bar-pages/home/index.wxss
@@ -42,21 +42,22 @@
 
 .promoter-icon {
   position: relative;
-  width: 38px;
-  height: 38px;
+  width: 34px;
+  height: 34px;
+  font-size: 0;
 }
 .promoter-avatar {
-  width: 38px;
-  height: 38px;
+  width: 34px;
+  height: 34px;
   border-radius: 50%;
   border: 2px solid #fff;
 }
 .promoter-medal {
   position: absolute;
-  right: -4px;
+  right: -6px;
   bottom: -2px;
-  width: 24px;
-  height: 24px;
+  width: 22px;
+  height: 22px;
 }
 
 .search-bar {
