--- a/pages/subpages/mine/promoter-center/index.wxml
+++ b/pages/subpages/mine/promoter-center/index.wxml
@@ -1,23 +1,23 @@
 <wxs module="NUM" src="/utils/filters/num.wxs" />
 
-<view class="nav-bar-wrap {{navBarBgVisible ? 'show-bg' : ''}} level-{{userInfo.level}}" style="padding-top: {{statusBarHeight}}px;">
+<view class="nav-bar-wrap {{navBarBgVisible ? 'show-bg' : ''}} level-{{curLevel}}" style="padding-top: {{statusBarHeight}}px;">
   <view class="nav-bar row">
     <view style="flex: 1;">
       <back-icon />
     </view>
-    <view class="nav-bar-title">推广中心</view>
+    <view class="nav-bar-title">代言奖励</view>
     <view style="flex: 1;"></view>
   </view>
 </view>
 
-<view class="container level-{{userInfo.level || 0}}" style="padding-top: {{statusBarHeight + 60}}px;">
+<view class="container level-{{curLevel || 0}}" style="padding-top: {{statusBarHeight + 60}}px;">
   <view
     class="upgradation-wrap"
-    style="background-image: url('https://static.tiddler.cn/mp/upgradation_bg_c{{userInfo.level}}.png')"
-    wx:if="{{userInfo.level < 4}}"
+    style="background-image: url('https://static.tiddler.cn/mp/upgradation_bg_c{{curLevel}}.png')"
+    wx:if="{{curLevel < 4}}"
   >
     <view class="progress-desc">
-      <text>距离C{{ userInfo.level }}，仅差</text>
+      <text>距离C{{ curLevel }}，仅差</text>
       <text style="color: #f5701d">{{ NUM.toFixed(100 - (achievementInfo.percent || 0), 2) }}%</text>
     </view>
     <view class="progress-bar-wrap">
@@ -42,7 +42,7 @@
   </view>
 
     <view class="account-info">
-    <view class="account-amount" wx:if="{{userInfo.level}}">
+    <view class="account-amount" wx:if="{{curLevel}}">
       <view class="account-amount-header">
         <view class="account-amount-title">我的账户</view>
         <view class="withdraw-btn" bindtap="withdraw">提现</view>
