--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -4,7 +4,7 @@
       <!-- <image class="sign-in-icon" src="/images/sign_in.png" /> -->
       <view class="promoter-icon" wx:if="{{promoterInfo}}">
         <image class="promoter-avatar" src="{{promoterInfo.avatar}}" />
-        <image class="promoter-medal" src="https://static.tiddler.cn/mp/medal.gif" />
+        <image class="promoter-medal" src="https://static.tiddler.cn/mp/promoter/level_{{promoterInfo.level}}/medal.gif" />
       </view>
     </view>
     <view class="menu-tabs">
